style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  width: 100%;
  height: 100%;
}

.header-container {
  display: flex;
  height: 4rem;
  color: #fff;
  background-color: #3c3a39;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.logo-container {
  width: 4.5rem;
  height: 1rem;
  line-height: 1.5rem;
  margin-left: 1.5rem;
  margin-right: 1.5rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
  color: #fff;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 1rem;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.hamburger-icon {
  color: white;
  padding-right: 1rem;
}

.headline-container {
  display: flex;
  flex-direction: column;
  padding: 8.5rem 1.5rem;
  background: #1c1a19;
  background-image: url('/images/background-image.png');
  background-repeat: no-repeat;
  background-attachment: initial;
  background-size: 8.5rem;
  background-position: right bottom;
  overflow: hidden;
  gap: 1em;
  justify-content: space-between;
}

.heading-text {
  margin-top: 5.5rem;
  color: #ff6b00;
  width: 20rem;
  height: 7rem;
  font-family: 'Crete Round', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 3.5rem;
  line-height: 4rem;
}

.subheader {
  color: #fff5e1;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 2rem;
  display: flex;
  align-items: center;
  margin-top: 0.5rem;
}

.description-text {
  width: 20.5rem;
  height: 7.5rem;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #fff;
}

.icon-wrap {
  display: flex;
  padding: 1rem 1rem;
  width: 12.5rem;
  gap: 0.5rem;
  height: 2.5rem;
}

ul {
  list-style-type: none;
}

.icon {
  margin: 0.5rem;
}

/* 2nd Part Portfolio Section CSS */

.top-card-container {
  margin-top: 10px;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 250px repeat(3, auto);
  min-height: 90px;
}

.myRecentWorksHeading {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 40px;
  font-family: 'Crete Round', sans-serif;
  font-style: normal;
  font-weight: 400;
  line-height: 52px;
  letter-spacing: 0;
  text-align: left;
  color: #1c1a19;
  margin-top: 132px;
  width: 327px;
  height: 35px;
  margin-left: 27px;
}

.section-break-firstline {
  width: 327px;
  margin-top: 50px;
  position: absolute;
  border: 0.5px solid #212121;
  align-items: center;
  margin-left: 26px;
  margin-bottom: 30px;
}

.mainImage {
  display: inline;
  width: 327px;
  height: 237px;
  margin-left: 27px;
}

.multiPostStories {
  display: flex;
  align-items: center;
  font-family: 'crete Round', sans-serif;
  font-style: normal;
  font-size: 32px;
  line-height: 44px;
  width: 327px;
  height: 36px;
  color: #091e42;
  margin-top: 14px;
  margin-left: 27px;
  margin-bottom: 0;
}

.page-information {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  width: 327px;
  height: 147px;
  line-height: 24px;
  margin-top: 12px;
  color: #091e42;
  margin-left: 27px;
}

.tech-icons {
  display: flex;
  float: left;
  gap: 2px;
  list-style: none;
  margin-left: 17px;
}

.stackButton {
  font-weight: 400;
  font-size: 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  background-color: #fff;
  color: #091e42;
  border: 2px solid #8993a4;
  padding: 10px 10px;
  margin-top: 20px;
}

.topcontainer-seeproject-button {
  background-color: #ff6b00;
  border: none;
  color: #fff;
  padding: 12px;
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-weight: 700;
  font-size: 17px;
  display: inline-block;
  cursor: pointer;
  width: 124px;
  margin-top: 4px;
  margin-left: 25px;
}

.topcontainer-seeproject-button:hover {
  border: 0.01rem solid #f55800;
  color: #f55800;
  background-color: #fff5e1;
}

.topcontainer-seeproject-button:active {
  background-color: #e05304;
}

.general-card-container {
  display: grid;
  justify-items: center;
  grid-template-rows: repeat(6, 370px);
  grid-template-columns: 100px;
  margin-left: 138px;
}

.general-card-one {
  background-image: url('/images/GeneralCardImgPlaceholder.png');
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  margin-top: 36px;
  height: 372px;
  width: 327px;
  gap: 10px;
}

.general-card-two {
  background-image: url('/images/GeneralCardImgPlaceholder.png');
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  margin-top: 88px;
  height: 372px;
  width: 327px;
  gap: 10px;
}

.general-card-three {
  background-image: url('/images/GeneralCardImgPlaceholder.png');
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  margin-top: 113px;
  height: 372px;
  width: 327px;
  gap: 10px;
}

.general-card-four {
  background-image: url('/images/GeneralCardImgPlaceholder.png');
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  margin-top: 157px;
  height: 372px;
  width: 327px;
  gap: 10px;
}

.general-card-five {
  background-image: url('/images/GeneralCardImgPlaceholder.png');
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  margin-top: 202px;
  height: 372px;
  width: 327px;
  gap: 10px;
}

.general-card-six {
  background-image: url('/images/GeneralCardImgPlaceholder.png');
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  margin-top: 247px;
  height: 372px;
  width: 327px;
  gap: 10px;
}

.printingDataHeading {
  display: flex;
  list-style: none;
  width: 295px;
  height: 81px;
  margin-top: 40px;
  padding-left: 13px;
  padding-top: 30px;
  line-height: 44px;
  font-size: 32px;
  font-style: normal;
  font-family: 'create Round', sans-serif;
  color: #fff;
}

.text-segment {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  color: #fff;
  width: 300px;
  height: 100px;
  line-height: 24px;
  margin-top: 30px;
  padding-left: 13px;
}

.builtWith {
  margin-top: 0;
  padding-left: 7px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  list-style: none;
}

.buttonOfTechStack {
  text-align: centre;
  text-decoration: none;
  display: inline-block;
  font-size: 15px;
  margin-right: 12px;
  margin-top: 2px;
  font-weight: 400;
  background-color: rgba(255, 255, 255, 0.24);
  border: none;
  color: #fff;
  padding: 10px 12px;
}

.general-card-button {
  display: inline-block;
  font-family: 'Inter', sans-serif;
  font-size: 17px;
  font-style: normal;
  font-weight: 700;
  cursor: pointer;
  text-align: center;
  padding: 12px;
  color: #fff;
  border: none;
  background-color: #ff6b00;
}

.general-card-button:hover {
  border: 0.01rem solid #f55800;
  color: #f55800;
  background-color: #fff5e1;
}

.general-card-button:active {
  background-color: #e05304;
}

.aboutme-container {
  display: flex;
  height: 100%;
  background-color: #1c1a19;
  flex-direction: column;
  padding-top: 120px;
  position: relative;
  margin-top: 375px;
  background-repeat: no-repeat;
  margin-left: -2px;
}

.aboutme-header {
  width: 327;
  height: 79px;
  color: #ff6b00;
  font-family: "Crete Round", sans-serif;
  font-style: normal;
  line-height: 88px;
  letter-spacing: 0.37px;
  margin-left: 24px;
  font-weight: 400;
  font-size: 72px;
}

.aboutme-textsection {
  width: 327px;
  height: 148px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #f4f5f7;
  padding-top: 12px;
  margin: 5px 24px 0 24px;
}

.resume-button {
  width: 156px;
  height: 48px;
  font-family: 'Inter', sans-serif;
  background-color: #ff6b00;
  border: none;
  color: #fff;
  padding: 12px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  font-weight: 700;
  font-size: 16px;
  letter-spacing: 0.03em;
  cursor: pointer;
  margin-top: 24px;
  margin-left: 24px;
}

.resume-button:hover {
  border: 0.01rem solid #f55800;
  color: #f55800;
  background-color: #fff5e1;
}

.resume-button:active {
  background-color: #e05304;
}

.secondBackgroundImage {
  background: url('/images/background-image2.png');
  height: 260px;
  width: 160px;
  background-repeat: no-repeat;
  position: absolute;
  right: 0;
  top: 370px;
}

.aboutme-sectionline {
  width: 327px;
  top: 640px;
  position: absolute;
  border: 1px solid #fff;
  align-items: center;
  margin-left: 24px;
}

.myskills-container {
  display: flex;
  margin-top: 300px;
  color: #fff;
  text-align: center;
  justify-content: center;
}

.skill-list {
  font-family: "InaiMathi", sans-serif;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  font-style: normal;
  list-style: none;
}

.tech-stacks {
  font-style: normal;
  font-family: "Inter", sans-serif;
  list-style: none;
  font-weight: 400;
  font-size: 22px;
  line-height: 43px;
  padding-top: 24px;
  padding-bottom: 24px;
}

/* Contact Form Styles */

.contactform-maincontainer {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.contactform-headercontainer {
  margin-top: 69px;
  margin-left: 23px;
  margin-right: 25px;
}

.contactform-headertext {
  display: flex;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 2rem;
  text-align: center;
  color: #172b4d;
  line-height: 2.7rem;
}

.contactform-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.fullname-field {
  width: 327px;
  height: 48px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9rem;
  text-decoration-color: #979493;
  padding-left: 3%;
  border: none;
}

.namefield-bottomline {
  margin-right: 0.1rem;
  margin-left: 0.1rem;
  width: 324px;
  border: 0.01rem solid #dbd8d7;
}

.email-field {
  width: 327px;
  height: 48px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9rem;
  line-height: 24px;
  padding-left: 3%;
  border: none;
}

.emailfield-bottomline {
  margin-right: 0.1rem;
  margin-left: 0.1rem;
  width: 324px;
  border: 0.01rem solid #dbd8d7;
}

.writeme-something-field {
  width: 327px;
  height: 38px;
  font-family: 'Inter', sans-serif;
  font-style: italic;
  font-weight: 400;
  font-size: 0.9rem;
  padding-top: 6%;
  padding-left: 3%;
  padding-bottom: 40%;
  background: #fbf8f7;
  color: #3c3a39;
  border: none;
}

.getintouch-button {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #ff6b00;
  color: #fff;
  width: 8rem;
  height: 3rem;
  border: none;
}

.getintouch-button:hover {
  border: 0.01rem solid #f55800;
  color: #f55800;
  background-color: #fff5e1;
}

.getintouch-button:active {
  background-color: #e05304;
}

.footer-dividerline {
  margin-top: 5rem;
  width: 100%;
  border: 0.01rem solid #dfe1e6;
}

.buttom-icon-wrap {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 1rem 0 2rem 0;
  gap: 1rem;
}

.footer-bottom {
  width: 8.3rem;
  height: 0.3rem;
  margin-bottom: 0.8rem;
  margin-left: 7.4rem;
  margin-right: 7.6rem;
  background-color: #0d151e;
  border: 0.01rem solid;
  border-radius: 1.5rem;
}

